// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render <p>No Expenses Currently</p> when there are no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <span>
        No expenses currently
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render the ExpenseList with Expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpenseListItem)
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <Connect(ExpenseListItem)
      amount={109500}
      createdAt={-172800000}
      description="REnt"
      id="2"
      key="2"
      note=""
    />
    <Connect(ExpenseListItem)
      amount={4500}
      createdAt={172800000}
      description="credit card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
